# ImitationLearningTools

./: .gitignore  CLAUDE.md  LICENSE  README.md  get_tasks.py  pyproject.toml  test_output.txt
examples/: export_rb.ipynb  export_rb.py
examples/_tmp_memmap/: meta.json  observation.memmap
examples/_tmp_memmap/next/: meta.json  observation.memmap
iltools/cli/: __init__.py  main.py
iltools/core/: __init__.py  metadata_schema.py  trajectory.py
iltools/datasets/: base_loader.py  manager.py  utils.py
iltools/datasets/lafan1/: __init__.py  loader.py
iltools/datasets/loco_mujoco/: loader.py
iltools/retarget/: __init__.py  base_retarget.py  pinocchio_retarget.py
src/iltools_cli/: main.py
src/iltools_core/: metadata_schema.py  trajectory.py
src/iltools_core/utils/: __init__.py  validation.py
src/iltools_datasets/: README.md  __init__.py  _entrypoints.py  base_loader.py  dataset_types.py  export.py  export_utils.py  jax_stream.py  manager.py  manger.py  offline.py  reference.py  replay_export.py  replay_manager.py  replay_memmap.py  storage.py  utils.py  windowed_dataset.py
src/iltools_datasets/amass/: loader.py
src/iltools_datasets/loco_mujoco/: __init__.py  loader.py
src/iltools_datasets/trajopt/: __init__.py  digit_refs.py  loader.py  readme.md
src/iltools_retarget/: base_retarget.py  pinocchio_retarget.py
tests/: conftest.py  temp.py  test_mj_viewer.py
tests/core/: test_metadata.py  test_validation.py
tests/datasets/: test_amass_loader.py  test_dataset_manager.py  test_digit_refs_jax.py  test_digit_stream_jit.py  test_full_pipeline_demo.py  test_integration.py  test_lafan1_csv_loader.py  test_loco_mujoco_integration.py  test_loco_mujoco_loader.py  test_manager_vectorized_integration.py  test_mujoco_viewer.py  test_offline_and_replay.py  test_parallel_trajectory_manager.py  test_real_thirdarm_discovery.py  test_replay_manager.py  test_replay_memmap.py  test_storage_vectorized.py  test_thirdarm_data_structure.py  test_trajopt_loader.py  test_trajopt_to_vectorized.py  test_windowed_dataset.py  test_zarr_to_replay_pipeline.py  test_zarr_window_cache.py
tests/training/: test_digit_training_streaming.py
