[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iltools"
version = "0.0.1"
authors = [{ name = "Feiyang Wu", email = "feiyang.wu@gatech.edu" }]
description = "Modular toolkit for robot imitation learning"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pydantic",
    "typer",
    "pinocchio",
    "smplx",
    "rich",
    "hydra-core",
    "zarr",
    "aiohttp",
    "tqdm",
    "gymnasium",
    "tensordict>=0.3",
]

[tool.pytest.ini_options]
addopts = "-q"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "visual: marks tests that require manual/visual inspection (deselect with '-m \"not visual\"')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
    "ignore::FutureWarning",
    "ignore::DeprecationWarning:jaxopt.*",
    "ignore::DeprecationWarning:tensorflow_probability.*",
]
